RESOLVED FIXED299016
[threaded-animation-resolution] accelerated animations do not run
https://bugs.webkit.org/show_bug.cgi?id=299016
Summary [threaded-animation-resolution] accelerated animations do not run
Antoine Quint
Reported 2025-09-17 05:44:03 PDT
Turning on the internal settings "Threaded Animation Resolution" makes even the most simple animation test fail to run.
Attachments
Antoine Quint
Comment 1 2025-09-17 05:46:18 PDT
EWS
Comment 2 2025-09-17 08:39:04 PDT
Committed 300083@main (ea4d34134645): <https://commits.webkit.org/300083@main> Reviewed commits have been landed. Closing PR #50859 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-09-17 08:40:14 PDT
Note You need to log in before you can comment on or make changes to this bug.